# AprilVIsion-2.0

./: .gitignore  APRILVISION_3.1_RELEASE.md  CMakeLists.txt  PHASE2_ENHANCEMENTS.md  PHASE3_COMPLETE.md  README.md  deploy.sh  requirements.txt  setup.sh
assets/: 2024-crescendo.json  2025-reefscape.json  2026-rebuilt.json  mac_cam_extrinsics.yml  mac_cam_intrinsics.yml
config/: cam2_intrinsics.yml  config-single-cam.yml  config.yml  field_layout.json  sim_config.yml
deploy/: aprilvision-dashboard.service  frc_vision.service  photonvision.service
docs/: API.md  CURVED_PATHS_GUIDE.md  JAVA_INTEGRATION_GUIDE.md  PathPlanner_API.md
examples/: semicircle_hub_shooter.cpp
robot-code-examples/: AlignToTagCommand.java  README.md  RobotContainerExample.java  VisionSubsystem.java
scripts/: aprilvision-bridge.py  aruco_calibration.py  build_mac.sh  calibrate_camera.sh  configure_network.sh  deploy.sh  detect_cameras.sh  download_wpilib.sh  fetch_layout.sh  health_check.sh  install_deps.sh  install_mac.sh  install_service.sh  match_mode.sh  network_diagnostics.sh  quick_test.sh  run.sh  run_sim.sh  setup_and_test.sh  test_camera.sh  update_photonvision.sh
src/: aprilvision_3.1_enhancements.hpp  calibration.cpp  calibration.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  detector.cpp  detector.hpp  field_layout.cpp  field_layout.hpp  fusion.cpp  fusion.hpp  main.cpp  nt_publisher.cpp  nt_publisher.hpp  phase2_monitoring.hpp  phase3_autoalign.hpp  phase3_curved_paths.hpp  pose.cpp  pose.hpp  pose_utils.hpp  ring_buffer.hpp  tracker.cpp  tracker.hpp  types.hpp  web_server.cpp  web_server.hpp
src/platform/: frame_source.hpp
src/sim/: auto_align.cpp  auto_align.hpp  field_renderer.cpp  field_renderer.hpp  game_scoring.cpp  game_scoring.hpp  path_planner.cpp  path_planner.hpp  robot_dynamics.cpp  robot_dynamics.hpp  sim_main.cpp  sim_types.hpp  simulator.cpp  simulator.hpp
web/: app.js  index.html  style.css
